--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,24 @@
-/* You can add global styles to this file, and also import other style files */
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap');
+
+//reset
+*, *:before, *:after, *::before, *::after {
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+    font-family: Roboto;
+    list-style: none;
+    text-decoration: none;
+    font-size: 100%;
+}
+
+.mq-container{
+    max-width: 1280px;
+    width: 100%;
+    margin: auto;
+    padding: 0 1rem;
+}
+
+.mq-row {
+    display: flex;
+    flex-wrap: wrap;
+}
