--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,1 +1,9 @@
-<p>home works!</p>
+<div class="mq-home">
+    <div class="mq-container">
+        <div class="mq-row mq-products__container">
+            <div class="mq-product" *ngFor="let item of productsList">
+                <app-card  [product]="item"></app-card>
+            </div>
+        </div>
+    </div>
+</div>
