--- a/src/app/shared/components/card/card.component.html
+++ b/src/app/shared/components/card/card.component.html
@@ -3,5 +3,5 @@
         <img [src]="product.attributes.image_app_url" />
     </div>
     <h3 class="mq-product__name">{{product.attributes.name}}</h3>
-    <p class="mq-product__price">{{product.attributes.price | currency}}</p>
+    <p class="mq-product__price">{{product.attributes.price | currency : 'USD' : 'symbol' : '2.0'}}</p>
 </div>
