--- a/src/app/pages/home/home.component.scss
+++ b/src/app/pages/home/home.component.scss
@@ -10,6 +10,12 @@
     padding: 1rem;
     border:  1px solid #f2f2f2;
     border-radius: .5rem;
-    background-color: #f3f3f3;
-    cursor: pointer;
+    background-color: #f8f8f8;
+    height: 27rem;
+    overflow: hidden;
+    margin: 2rem 0;
+    transition: all .2s ease-in-out;
+    &:hover{
+        box-shadow: 5px 5px 7px rgba(0,0,0,.1) ;
+    }
 }
