--- a/src/app/shared/components/card/card.component.scss
+++ b/src/app/shared/components/card/card.component.scss
@@ -2,9 +2,21 @@
     &__container {
         width: 100%;
         position: relative;
+        height: 100%;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+
     }
-    &__image--container {
+    &__image{
+        object-fit: contain;
         width: 100%;
         height: 100%;
+        &--container {
+            width: 100%;
+            height: 13.75rem;
+            overflow: hidden;
+            background-color: #fff;
+        }
     }
 }
