--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -6,7 +6,7 @@
 
             </div>
             <div class="mq-col mq-cart__container">
-                <app-cart-button></app-cart-button>
+                <app-cart-button [cart]="cart"></app-cart-button>
             </div>
         </div>
     </div>
